--- a/Web Application for Analytics Data/Views/Home/Index.cshtml
+++ b/Web Application for Analytics Data/Views/Home/Index.cshtml
@@ -9,4 +9,9 @@
             Go to Report Consultation
         </a>
     </p>
+    <p>
+        <a class="btn btn-primary" asp-controller="ClusteringAnalysis" asp-action="Index">
+            Go to Report Analytics
+        </a>
+    </p>
 </div>
