--- a/Web Application for Analytics Data/Views/Home/Index.cshtml
+++ b/Web Application for Analytics Data/Views/Home/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+        ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" href="~/css/Index.css" asp-append-version="true" />
 
 <div class="text-center">
     <h1 class="display-4">Welcome to DataKeeper Analytics</h1>
-    <p>
+
+    <div class="button-container">
         <a class="btn btn-primary" asp-controller="Report" asp-action="Index">
             Go to Report Consultation
         </a>
-    </p>
-    <p>
         <a class="btn btn-primary" asp-controller="ClusteringAnalysis" asp-action="Index">
             Go to Report Analytics
         </a>
-    </p>
+    </div>
 </div>
