--- a/Web Application for Analytics Data/Views/ClusteringAnalysis/Index.cshtml
+++ b/Web Application for Analytics Data/Views/ClusteringAnalysis/Index.cshtml
@@ -96,11 +96,5 @@
 }
 
 @section Scripts {
-    <script>
-        // Initialize all tooltips
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-    </script>
+    <script src="js/site.js"></script>
 }
